--- a/HTML page/PersonalPage.html
+++ b/HTML page/PersonalPage.html
@@ -81,7 +81,7 @@
 </table>
 
 <br><h2 align="center">Personality Test</h2></br>
-<center><img src= "..\Assets\personality test.png" width= "60%" height= "30%"></img></center>
+<center><img src= "../Assets/personality test.png" width= "60%" height= "30%"></img></center>
 
 <br></br>
 	<p><big><center>I believe that the test taken has validity on a wide basis as it may help 
