--- a/HTML page/PersonalPage.html
+++ b/HTML page/PersonalPage.html
@@ -28,7 +28,7 @@
 
 <center><h2>Character Traits</h2></center>
 
-<center><img src= "..\Assets\character.jpg" width= "80%" height="50%"><img></center>
+<center><img src= "..\Assets\personality test.png"  width= "80%" height="50%"><img></center>
 
 
 <br></br><table border= "1" cellpadding= "20" width= "80%" height= "80%" align= "center">
