--- a/HTML page/PersonalPage.html
+++ b/HTML page/PersonalPage.html
@@ -28,7 +28,7 @@
 
 <center><h2>Character Traits</h2></center>
 
-<center><img src= "..\Assets\personality test.PNG"  width= "80%" height="50%"><img></center>
+<center><img src= "..\Assets\personality test.jpg"  width= "80%" height="50%"><img></center>
 
 
 <br></br><table border= "1" cellpadding= "20" width= "80%" height= "80%" align= "center">
@@ -81,7 +81,7 @@
 </table>
 
 <br><h2 align="center">Personality Test</h2></br>
-<center><img src= "../Assets/personality test.png" width= "60%" height= "30%"></img></center>
+<center><img src= "../Assets/personality test.PNG" width= "60%" height= "30%"></img></center>
 
 <br></br>
 	<p><big><center>I believe that the test taken has validity on a wide basis as it may help 
