--- a/HTML page/StoryBoard.html
+++ b/HTML page/StoryBoard.html
@@ -42,7 +42,7 @@
 
 <i><font color="white"><h2 align="center">Home Page</h2></font></i>
 
-	<center><img src= "..\Assets\homepage.png"  align="center" width= "50%" height="40%"></img></center>
+	<center><img src= "..\Assets\homepage.PNG"  align="center" width= "50%" height="40%"></img></center>
 
 <br></br>
 
@@ -57,7 +57,7 @@
 
 <i><font color="white"><h2 align="center">Personal Page</h2></font></i>
 	
-	<center><img src= "..\Assets\personalpage.png"  align="center" width= "50%" height="40%"></img></center>
+	<center><img src= "..\Assets\personalpage.PNG"  align="center" width= "50%" height="40%"></img></center>
 
 <br></br>
 
@@ -68,7 +68,7 @@
 
 <i><font color="white"><h2 align="center">Professional Page</h2></font></i>
 	
-	<center><img src= "..\Assets\professionalpage.png"  align="center" width= "50%" height="40%"></img></center>
+	<center><img src= "..\Assets\professionalpage.PNG"  align="center" width= "50%" height="40%"></img></center>
 <br></br>
 	
 	<br><big>Purpose: The professional page shows my resume along with the mission and vision statement. It also contains
@@ -78,7 +78,7 @@
 
 <i><font color="white"><h2 align="center">Personal Development</h2></font></i>
 
-	<center><img src= "..\Assets\personaldevelopment.png"  align="center" width= "50%" height="40%"></img></center>
+	<center><img src= "..\Assets\personaldevelopment.PNG"  align="center" width= "50%" height="40%"></img></center>
 
 <br></br>
 
@@ -91,7 +91,7 @@
 
 <i><font color="white"><h2 align="center">References</h2></font></i>
 
-	<center><img src= "..\Assets\reference.png"  align="center" width= "50%" height="40%"></img></center>
+	<center><img src= "..\Assets\reference.PNG"  align="center" width= "50%" height="40%"></img></center>
 
 <br></br>
 
