--- a/HTML page/StoryBoard.html
+++ b/HTML page/StoryBoard.html
@@ -103,7 +103,7 @@
 
 <i><font color="white"><h2 align="center">Hosting Link for Website</h2></font></i>
 <br></br>
-<a href= "https://elephantmemes.github.io/gabbyLand/"> https://elephantmemes.github.io/gabbyLand/</a>
+<big><a href= "https://elephantmemes.github.io/gabbyLand/"> https://elephantmemes.github.io/gabbyLand/</a></big>
 
 
 <br></br>
