--- a/HTML page/PersonalDevelopment.html
+++ b/HTML page/PersonalDevelopment.html
@@ -3,6 +3,8 @@
 <head>
 
 	<title>PersonalDevelopment </title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 </head>
 
 <body background= "..\Assets\bg3.jpg">
