--- a/HTML page/PersonalPage.html
+++ b/HTML page/PersonalPage.html
@@ -3,6 +3,9 @@
 <head>
 
 	<title>PersonalPage </title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+	
 </head>
 
 <body background="..\Assets\bg2.jpg" >
@@ -113,9 +116,9 @@
 
 <tr>
 
-	<td><font color="white"><big>Taking Care of Animals</big></font></td>
-	<td align="center"><font color="white"><big>Swimmming</big></font></td>
-	<td align="right"><font color= "blue"><big>Dancing</big><font></td>
+	<td><font color="navy"><big>Taking Care of Animals</big></font></td>
+	<td align="center"><font color="navy"><big>Swimmming</big></font></td>
+	<td align="right"><font color= "navy"><big>Dancing</big><font></td>
 
 </tr>
 
