--- a/HTML page/StoryBoard.html
+++ b/HTML page/StoryBoard.html
@@ -3,6 +3,9 @@
 <head>
 
 	<title>StoryBoard </title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+	
 </head>
 
 <body background= "..\Assets\bg2.jpg">
