--- a/HTML page/PersonalDevelopment.html
+++ b/HTML page/PersonalDevelopment.html
@@ -4,7 +4,7 @@
 
 	<title>PersonalDevelopment </title>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body background= "..\Assets\bg3.jpg">
