--- a/HTML page/ProfessionalPage.html
+++ b/HTML page/ProfessionalPage.html
@@ -4,7 +4,7 @@
 
 	<title>ProfessionalPage </title>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 </head>
 
