--- a/HTML page/StoryBoard.html
+++ b/HTML page/StoryBoard.html
@@ -4,8 +4,6 @@
 
 	<title>StoryBoard </title>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
 </head>
 
 <body background= "..\Assets\bg2.jpg">
@@ -43,6 +41,23 @@
 </br>
 
 
+<i><font color="white"><h2 align="center">Features of Website</h2></font></i>
+
+
+<br></br><table border= "1" cellpadding= "30" width= "90%" height= "90%" align= "center">
+	
+<tr align="center">
+
+	<td>Images</td>
+	<td>Videos</td>
+	<td>Lists</td>
+	<td>Tables</td>
+	<td>Bookmarks</td>
+	<td>External Links</td>
+</tr>
+</table>
+
+<br></br>
 <i><font color="white"><h2 align="center">Home Page</h2></font></i>
 
 	<center><img src= "..\Assets\homepage.PNG"  align="center" width= "50%" height="40%"></img></center>
