--- a/HTML page/StoryBoard.html
+++ b/HTML page/StoryBoard.html
@@ -121,7 +121,7 @@
 
 <i><font color="white"><h2 align="center">Hosting Link for Website</h2></font></i>
 <br></br>
-<big><a href= "https://elephantmemes.github.io/gabbyLand/"> https://elephantmemes.github.io/gabbyLand/</a></big>
+<big><font color="white"><a href= "https://elephantmemes.github.io/gabbyLand/"> https://elephantmemes.github.io/gabbyLand/</a></font></big>
 
 
 <br></br>
