--- a/HTML page/StoryBoard.html
+++ b/HTML page/StoryBoard.html
@@ -120,8 +120,7 @@
 
 
 <i><font color="white"><h2 align="center">Hosting Link for Website</h2></font></i>
-<br></br>
-<big><font color="white"><a href= "https://elephantmemes.github.io/gabbyLand/"> https://elephantmemes.github.io/gabbyLand/</a></font></big>
+<br></br><big><a href= "https://elephantmemes.github.io/gabbyLand/"><font color="white">https://elephantmemes.github.io/gabbyLand/</font></a></big>
 
 
 <br></br>
