--- a/HTML page/StoryBoard.html
+++ b/HTML page/StoryBoard.html
@@ -40,6 +40,10 @@
 
 </br>
 
+<i><font color="white"><h2 align="center">Target Audience </h2></font></i>
+<big>The target audience for my website are professionals, teachers, students and persons who have a creative mindest. It is not
+only limited to these individuals specifically but also the general public.</big>
+
 
 <i><font color="white"><h2 align="center">Features of Website</h2></font></i>
 
