--- a/HTML page/ProfessionalPage.html
+++ b/HTML page/ProfessionalPage.html
@@ -25,8 +25,6 @@
 </table>
 
 
-<br></br>
-
 	<a href="mailto:gabrielleawhite23@gmail.com?subject= Postive Vybes Only"><img src= "..\Assets\Gabrielle Picture.jpg"  align="left" width= "20%" height="20%"></img></a>
 
 <center>
@@ -38,7 +36,8 @@
 
 </center>
 
-<br><br><br><br><hr color= "black" height= "100%"></br></br>
+
+<br><br><br><br><br><hr color= "black" height= "100%"></br></br></br></br></br>
 
 
 <center><br>
