--- a/HTML page/PersonalDevelopment.html
+++ b/HTML page/PersonalDevelopment.html
@@ -141,7 +141,8 @@ achieving.</p>
 	and learning from my experiences. </p>
 
 
-<a href= "#Top"> <h4 align= "right">Top of page</a></h4>
+
+<br><a href="#Top"><h4 align="right">Top of page</h4></a></br>
 
 
 </body>
